--- a/static/index.html
+++ b/static/index.html
@@ -16,6 +16,6 @@
     <div>Mat <span id="mat">wood</span>  Type <span id="typ">wall</span></div>
   </div>
   <canvas id="c"></canvas>
-  <script src="static/client.js"></script>
+  <script src="client.js"></script>
 </body>
 </html>
